fix(style): long table overflow

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -417,21 +417,29 @@ figure.highlight
         display: block
 
 /* ---------------------------------
- *        Fix Video
+ *          Overflow Table
  * --------------------------------- */
-.video-container {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 25px;
-	height: 0;
-}
-.video-container iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+.table-overflow
+    overflow-x: auto
+    table
+        width: auto!important
+        th
+            word-break: keep-all
+
+/* ---------------------------------
+ *            Fix Video
+ * --------------------------------- */
+.video-container
+    position: relative
+    padding-bottom: 56.25%
+    padding-top: 25px
+    height: 0
+    iframe
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
 
 /* ---------------------------------
  *        Fix Gist Snippet
